feat : gemini の機能追加
